<resources>
    <string name="app_name">Lesson4Retrofit</string>
    <string name="privacy_icon_desc">is repo private icon</string>
    <string name="name">Name:</string>
    <string name="description">Description:</string>
    <string name="language">Language:</string>
    <string name="url">Url:</string>
    <string name="check_internet">Check Internet connection</string>
    <string name="fill_user_name">Please fill username</string>
    <string name="error">Error</string>
    <string name="save_in_room">save in room</string>
    <string name="load_from_room">load from room</string>
    <string name="save_in_realm">save in realm</string>
    <string name="load_from_realm">load from realm</string>
    <string name="load">load</string>
    <string name="items_count">Items count:</string>
    <string name="time">Time:</string>
    <string name="et_hint">enter user name of leave empty to load all</string>
    <string name="user_not_found">user not found</string>
</resources>
